Crash : Setting Transparent Shadow on Objects Ignoring Material Nodes Crashes Blender #52024

Closed
opened 2017-07-11 15:18:54 +02:00 by ronan ducluzeau · 6 comments

System Information
Ubuntu 16.04 64bits and NVIDIA Titan Black

Blender Version
Broken: 2.8 hash 0a57597
Worked: (optional)

Short description of error
Default Cube have a default material with nodes ignored.
If you try to set-up transparent shadow method before enabling nodes containing transparency value ; Blender crashes.

Exact steps for others to reproduce the error
Open attached.file
Change Transparent Shadow setting from none to Clip or Hashed. -> Blender crashes.

Transparency _Crash.blend
Transparency _Crash.crash.txt

**System Information** Ubuntu 16.04 64bits and NVIDIA Titan Black **Blender Version** Broken: 2.8 hash 0a57597 Worked: (optional) **Short description of error** Default Cube have a default material with nodes ignored. If you try to set-up transparent shadow method before enabling nodes containing transparency value ; Blender crashes. **Exact steps for others to reproduce the error** Open attached.file Change Transparent Shadow setting from none to Clip or Hashed. -> Blender crashes. [Transparency _Crash.blend](https://archive.blender.org/developer/F658343/Transparency__Crash.blend) [Transparency _Crash.crash.txt](https://archive.blender.org/developer/F658345/Transparency__Crash.crash.txt)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @zeauro

Added subscriber: @zeauro
Clément Foucault was assigned by Dalai Felinto 2017-07-11 15:48:16 +02:00

Added subscriber: @dfelinto

Added subscriber: @dfelinto

This is the backtrace: P514

This is the backtrace: [P514](https://archive.blender.org/developer/P514.txt)

This issue was referenced by 1b91b443e0

This issue was referenced by 1b91b443e079e2b911d22281ef2526ea3eb12684

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52024
No description provided.