Eevee: Transparency: Fix crash when using transparent shadows.

Fixes T52024